[gd_scene load_steps=48 format=3 uid="uid://daiipt5hwl6k0"]

[ext_resource type="Script" uid="uid://bxpphg2i11xlo" path="res://Escenas/player/player.gd" id="1_e6cd0"]
[ext_resource type="Texture2D" uid="uid://ll8idvv4e0sd" path="res://Assets/character/player/pj_ataque.png" id="2_8w2jf"]
[ext_resource type="Texture2D" uid="uid://svu1qi8nh2jf" path="res://Assets/character/player/Cael.png" id="3_f5kae"]
[ext_resource type="Texture2D" uid="uid://88e8y34vflbw" path="res://Assets/character/player/animatedsprite_heart_player.png" id="3_qgqwx"]
[ext_resource type="Texture2D" uid="uid://o7dr0o7tvfny" path="res://Assets/rooms/Objetos_de_escenario.png" id="4_f0w31"]
[ext_resource type="AudioStream" uid="uid://cdxx8finvhmev" path="res://music/sound_heart_player_slow.mp3" id="6_pgevo"]
[ext_resource type="AudioStream" uid="uid://ero2pdox6fkq" path="res://music/sound_heart_player_fast.mp3" id="7_8w2jf"]
[ext_resource type="Texture2D" uid="uid://c4g3cme3c5spd" path="res://Assets/character/player/luz.png" id="8_pgevo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ij6vm"]
atlas = ExtResource("2_8w2jf")
region = Rect2(0, 3072, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbr3d"]
atlas = ExtResource("2_8w2jf")
region = Rect2(1024, 3072, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb8p0"]
atlas = ExtResource("2_8w2jf")
region = Rect2(2048, 3072, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5g35"]
atlas = ExtResource("2_8w2jf")
region = Rect2(3072, 3072, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgevo"]
atlas = ExtResource("3_f5kae")
region = Rect2(0, 2048, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w2jf"]
atlas = ExtResource("3_f5kae")
region = Rect2(0, 2048, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0w31"]
atlas = ExtResource("3_f5kae")
region = Rect2(928, 2048, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni5xh"]
atlas = ExtResource("3_f5kae")
region = Rect2(1856, 2048, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4gb1"]
atlas = ExtResource("3_f5kae")
region = Rect2(2784, 2048, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5siw"]
atlas = ExtResource("4_f0w31")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7dyv"]
atlas = ExtResource("2_8w2jf")
region = Rect2(0, 1536, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_chps6"]
atlas = ExtResource("2_8w2jf")
region = Rect2(1024, 1536, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0acf"]
atlas = ExtResource("2_8w2jf")
region = Rect2(2048, 1536, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ywx"]
atlas = ExtResource("2_8w2jf")
region = Rect2(3072, 1536, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v8j0"]
atlas = ExtResource("3_f5kae")
region = Rect2(1856, 0, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_deacv"]
atlas = ExtResource("3_f5kae")
region = Rect2(0, 0, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pbup"]
atlas = ExtResource("3_f5kae")
region = Rect2(928, 0, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6xhv"]
atlas = ExtResource("3_f5kae")
region = Rect2(1856, 0, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_8254y"]
atlas = ExtResource("3_f5kae")
region = Rect2(2784, 0, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv1is"]
atlas = ExtResource("2_8w2jf")
region = Rect2(0, 0, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_qffed"]
atlas = ExtResource("2_8w2jf")
region = Rect2(1024, 0, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_j272g"]
atlas = ExtResource("2_8w2jf")
region = Rect2(2048, 0, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o4b8"]
atlas = ExtResource("2_8w2jf")
region = Rect2(3072, 0, 1024, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w7tc"]
atlas = ExtResource("3_f5kae")
region = Rect2(1856, 3072, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5q7p"]
atlas = ExtResource("3_f5kae")
region = Rect2(0, 3072, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yrs0"]
atlas = ExtResource("3_f5kae")
region = Rect2(928, 3072, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ec2u"]
atlas = ExtResource("3_f5kae")
region = Rect2(1856, 3072, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_apemf"]
atlas = ExtResource("3_f5kae")
region = Rect2(2784, 3072, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gpb4"]
atlas = ExtResource("3_f5kae")
region = Rect2(0, 4096, 928, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgqnw"]
atlas = ExtResource("3_f5kae")
region = Rect2(928, 4096, 928, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_ptduk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij6vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbr3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb8p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5g35")
}],
"loop": true,
"name": &"back_attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgevo")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w2jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0w31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni5xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4gb1")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5siw")
}],
"loop": false,
"name": &"death",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7dyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chps6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0acf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4ywx")
}],
"loop": true,
"name": &"front_attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v8j0")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_deacv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pbup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6xhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8254y")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv1is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qffed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j272g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o4b8")
}],
"loop": true,
"name": &"side_attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w7tc")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5q7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yrs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ec2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apemf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gpb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgqnw")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8w2jf"]
radius = 22.0
height = 52.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6njrx"]
atlas = ExtResource("3_qgqwx")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgfde"]
atlas = ExtResource("3_qgqwx")
region = Rect2(0, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlwfv"]
atlas = ExtResource("3_qgqwx")
region = Rect2(0, 32, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v5l4"]
atlas = ExtResource("3_qgqwx")
region = Rect2(0, 48, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b21vg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6njrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgfde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v5l4")
}],
"loop": true,
"name": &"Vida ",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pgevo"]
radius = 32.0
height = 108.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pgevo"]
radius = 182.011

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 26
script = ExtResource("1_e6cd0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 9.53674e-07)
scale = Vector2(0.1, 0.0921875)
sprite_frames = SubResource("SpriteFrames_ptduk")
animation = &"back_attack"
offset = Vector2(0, -700)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -24)
shape = SubResource("CapsuleShape2D_8w2jf")

[node name="Node" type="Node" parent="."]

[node name="HeartSoundSlow" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("6_pgevo")

[node name="HeartSoundFast" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("7_8w2jf")

[node name="Vida" type="AnimatedSprite2D" parent="Node"]
visible = false
texture_filter = 1
position = Vector2(367, 6)
scale = Vector2(0.708334, 0.75)
sprite_frames = SubResource("SpriteFrames_b21vg")
animation = &"Vida "
frame_progress = 0.322845

[node name="HitBoxArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea"]
shape = SubResource("CapsuleShape2D_pgevo")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="DealAttackTimer" type="Timer" parent="."]

[node name="EnemyDamageDelayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="LinternaLight" type="PointLight2D" parent="."]
y_sort_enabled = true
enabled = false
color = Color(1, 1, 0.6, 1)
energy = 1.18
texture = ExtResource("8_pgevo")
offset = Vector2(0, -50)

[node name="VisionLinterna" type="Area2D" parent="."]
collision_layer = 29
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionLinterna"]
position = Vector2(0, -32)
shape = SubResource("CircleShape2D_pgevo")

[connection signal="body_entered" from="HitBoxArea" to="." method="_on_hit_box_area_body_entered"]
[connection signal="body_exited" from="HitBoxArea" to="." method="_on_hit_box_area_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="DealAttackTimer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="EnemyDamageDelayTimer" to="." method="_on_enemy_damage_delay_timer_timeout"]
[connection signal="body_entered" from="VisionLinterna" to="." method="_on_vision_linterna_body_entered"]
[connection signal="body_exited" from="VisionLinterna" to="." method="_on_vision_linterna_body_exited"]
